FIX #360 changed the context in which some popup tools were enabled in the TableComponent.